# adventcode2023

./: .gitignore  pyproject.toml  readme_if_stuck.md
.scripts/: create_folders.py  save_todays_puzzle_data.py
day_01/: output_file.txt  part1.py  part2.py  puzzle_text_day_01.md
day_02/: part1.py  part2.py  puzzle_text_day_02.md
day_03/: part1.py  part2.py  puzzle_text_day_03.md
day_04/: part1.py  part2.py  puzzle_text_day_04.md
day_05/: part1.py  part2-redo.py  part2.py  puzzle_text_day_05.md
day_06/: part1.py  part2.py  puzzle_text_day_06.md
day_07/: output_file.txt  part1.py  part2.py  puzzle_text_day_07.md
day_08/: part1 copy.py  part1.py  part2.py  puzzle_text_day_08.md
day_09/: part1.py  part2.py  puzzle_text_day_09.md
day_10/: day03.py  part1.py  puzzle_text_day_10.md
day_11/: expanded_universe.txt  part1.py  part2.py  puzzle_text_day_11.md  testdata_day_11 copy.txt
day_12/: part1.py  puzzle_text_day_12.md
