[tool.poetry]
name = "adventcode2023"
version = "0.1.0"
description = "Jonathan Bowden's poetry setup for Advent of Code 2023"
authors = ["Jonathan Bowden"]
license = "n/a"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
pandas = "^2.1.3"
numba = "^0.58.1"
advent-of-code-data = "^2.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
